--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <version>2.2.41</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.17.1</version>
+        </dependency>
     </dependencies>
 
     <build>
